--- a/index.html
+++ b/index.html
@@ -13,5 +13,14 @@
     <link rel="stylesheet" href="./css/styles.css" />
     <title>Добро пожаловать!</title>
   </head>
-  <body></body>
+  <body>
+    <ul>
+      <li><a href="./3d-cube.html">3D rotating cube</a></li>
+      <li>
+        <a href="./transition-timing-function.html"
+          >Timing function with timer</a
+        >
+      </li>
+    </ul>
+  </body>
 </html>
