--- a/transition-timing-function.html
+++ b/transition-timing-function.html
@@ -67,6 +67,7 @@
       /* Добавил */
       .container {
         position: relative;
+        background-color: #f9f9f9;
       }
       .container > .circle {
         display: flex;
@@ -148,9 +149,13 @@
         transform: rotate(360deg);
       }
     </style>
+    <link rel="stylesheet" href="./css/styles.css" />
+
     <title>transition-timing-function</title>
   </head>
   <body>
+    <a class="home-btn" href="./index.html" aria-label="home button"></a>
+
     <h1>A transition is triggered when hovering over a container</h1>
 
     <div class="container">
